fix: added fix for panel setting scrollbar issue (#10587)
* fix: added fix for panel setting scrollbar issue

* fix: added changes for panel switch

--- a/frontend/src/container/NewWidget/RightContainer/RightContainer.styles.scss
+++ b/frontend/src/container/NewWidget/RightContainer/RightContainer.styles.scss
@@ -1,6 +1,7 @@
 .right-container {
 	display: flex;
 	flex-direction: column;
+	padding-bottom: 48px;
 
 	.header {
 		display: flex;
